--- a/index.css
+++ b/index.css
@@ -47,6 +47,7 @@ box-shadow: 4px 2px 6px;
 {
 
   max-width: 50px;
+  margin-right: auto;
 
 }
 
@@ -106,6 +107,20 @@ font-size: 18px;
   overflow: hidden;
   box-shadow: 4px 2px 6px;
 
+}
+.carousel-cont
+{
+	margin-bottom: 10% ;
+}
+.carousel-caption
+{
+	color: black;
+	margin-top: 100%;
+}
+.carousel-captions
+{
+	color: black;
+	margin-top: 100%;
 }
 
 .projects
